# pipeline

./: .gitignore  .pre-commit-config.yaml  DEVELOPERS.md  README.md  justfile  opensafely_fastparser-1.0-py3-none-any.whl  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.fastparser.in  requirements.prod.txt  requirements.uvmirror  requirements.uvmirror.txt  version
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  main.yml  pydantic.yml  update-dependencies.yml  uvmirror-check.yml
docs/adr/: 0001-manually-approve-dependabot-changes.md
fastparser/: README.md  pyproject.toml  requirements.txt
opensafely_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pipeline/: __init__.py  exceptions.py  extractors.py  features.py  legacy.py  loading.py  main.py  models.py  outputs.py  types.py  validation.py
pypi-index/simple/opensafely-pipeline/: index.html  index.json
scripts/: get-version.py
tests/: conftest.py  test_extractors.py  test_fastparser.py  test_features.py  test_legacy.py  test_loading.py  test_main.py  test_models.py  test_outputs.py  test_type_validation.py  test_validation.py
tests/fixtures/invalid_yaml/: duplicate_keys.yaml
tests/fixtures/valid_yaml/: project.yaml
