[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "opensafely-pipeline"
description = "OpenSAFELY pipeline configuration parsing library"
readme = "README.md"
authors = [{name = "OpenSAFELY", email = "tech@opensafely.org"}]
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
requires-python = ">=3.8"
dependencies = [
  "pydantic",
  "ruamel.yaml",
]
dynamic = ["version"]

[project.urls]
Home = "https://opensafely.org"
Documentation = "https://docs.opensafely.org"
Source = "https://github.com/opensafely-core/pipeline"

[tool.coverage.run]
branch = true
omit = [
  ".venv/*",
  "pipeline/__main__.py",
]

[tool.coverage.report]
fail_under = 100
skip_covered = true

[tool.coverage.html]

[tool.isort]
profile = "black"
lines_after_imports = 2
skip_glob = [".direnv", "venv", ".venv"]

[tool.mypy]
files = "pipeline"
exclude = "^pipeline/__main__.py$"
plugins = [
  "pydantic.mypy",
]
strict = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true

[tool.pytest.ini_options]

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.setuptools_scm]
